alpm-files/tests/fixtures/parser_errors/empty_line_in_list_of_paths.snap
---
source: alpm-files/tests/parser_errors.rs
description: "%FILES%\nusr/\nusr/bin/\n\nusr/bin/foo\n"
expression: error
---
Parser failed with the following error:
parse error at line 5, column 1
  |
5 | usr/bin/foo
  | ^
expected no further path after newline
